set(requires
   "arduino"
)

set(sources
    "./src/extras/RFC2047.cpp"
    "./src/ESP_Mail_Client.cpp"
    "./src/client/SSLClient/client/BSSL_CertStore.cpp"
    "./src/client/SSLClient/client/stm32_time_fix.c"
    "./src/client/SSLClient/client/BSSL_Helper.cpp"
    "./src/client/SSLClient/client/BSSL_SSL_Client.cpp"
    "./src/client/SSLClient/client/BSSL_TCP_Client.cpp"
    "./src/client/SSLClient/bssl/rsa_i62_pss_vrfy.c"
    "./src/client/SSLClient/bssl/i15_moddiv.c"
    "./src/client/SSLClient/bssl/rsa_i31_pkcs1_sign.c"
    "./src/client/SSLClient/bssl/i32_modpow.c"
    "./src/client/SSLClient/bssl/i31_ninv31.c"
    "./src/client/SSLClient/bssl/ec_p256_m15.c"
    "./src/client/SSLClient/bssl/rsa_i62_pkcs1_sign.c"
    "./src/client/SSLClient/bssl/i15_decmod.c"
    "./src/client/SSLClient/bssl/i32_div32.c"
    "./src/client/SSLClient/bssl/ssl_server_full_rsa.c"
    "./src/client/SSLClient/bssl/hmac_ct.c"
    "./src/client/SSLClient/bssl/i31_bitlen.c"
    "./src/client/SSLClient/bssl/rsa_i15_privexp.c"
    "./src/client/SSLClient/bssl/ssl_engine_default_rsavrfy.c"
    "./src/client/SSLClient/bssl/rsa_i15_oaep_encrypt.c"
    "./src/client/SSLClient/bssl/aes_common.c"
    "./src/client/SSLClient/bssl/mgf1.c"
    "./src/client/SSLClient/bssl/rsa_i15_pss_vrfy.c"
    "./src/client/SSLClient/bssl/ec_c25519_m31.c"
    "./src/client/SSLClient/bssl/aes_big_cbcdec.c"
    "./src/client/SSLClient/bssl/ssl_server_minf2g.c"
    "./src/client/SSLClient/bssl/prf.c"
    "./src/client/SSLClient/bssl/sha1.c"
    "./src/client/SSLClient/bssl/settings.c"
    "./src/client/SSLClient/bssl/ssl_engine_default_ec.c"
    "./src/client/SSLClient/bssl/ssl_server_minv2g.c"
    "./src/client/SSLClient/bssl/rsa_i32_pkcs1_sign.c"
    "./src/client/SSLClient/bssl/aes_x86ni.c"
    "./src/client/SSLClient/bssl/rsa_i62_keygen.c"
    "./src/client/SSLClient/bssl/des_tab_cbcenc.c"
    "./src/client/SSLClient/bssl/ecdsa_i15_vrfy_asn1.c"
    "./src/client/SSLClient/bssl/rsa_pkcs1_sig_pad.c"
    "./src/client/SSLClient/bssl/aes_ct64_cbcenc.c"
    "./src/client/SSLClient/bssl/rsa_i15_oaep_decrypt.c"
    "./src/client/SSLClient/bssl/rsa_i31_pss_vrfy.c"
    "./src/client/SSLClient/bssl/rsa_i15_pss_sign.c"
    "./src/client/SSLClient/bssl/x509_minimal.c"
    "./src/client/SSLClient/bssl/rsa_i32_pss_sign.c"
    "./src/client/SSLClient/bssl/rsa_i31_pubexp.c"
    "./src/client/SSLClient/bssl/aes_ct_enc.c"
    "./src/client/SSLClient/bssl/i15_muladd.c"
    "./src/client/SSLClient/bssl/ssl_server_full_ec.c"
    "./src/client/SSLClient/bssl/ec_p256_m31.c"
    "./src/client/SSLClient/bssl/ec_all_m31.c"
    "./src/client/SSLClient/bssl/enc64be.c"
    "./src/client/SSLClient/bssl/aes_small_enc.c"
    "./src/client/SSLClient/bssl/rsa_oaep_unpad.c"
    "./src/client/SSLClient/bssl/sysrng.c"
    "./src/client/SSLClient/bssl/poly1305_i15.c"
    "./src/client/SSLClient/bssl/pkey_decoder.c"
    "./src/client/SSLClient/bssl/i32_decred.c"
    "./src/client/SSLClient/bssl/md5.c"
    "./src/client/SSLClient/bssl/i15_add.c"
    "./src/client/SSLClient/bssl/i15_modpow.c"
    "./src/client/SSLClient/bssl/rsa_i32_pkcs1_vrfy.c"
    "./src/client/SSLClient/bssl/rsa_i15_pubexp.c"
    "./src/client/SSLClient/bssl/i15_decred.c"
    "./src/client/SSLClient/bssl/ssl_client.c"
    "./src/client/SSLClient/bssl/rsa_i15_pkcs1_sign.c"
    "./src/client/SSLClient/bssl/ssl_server.c"
    "./src/client/SSLClient/bssl/aes_small_ctrcbc.c"
    "./src/client/SSLClient/bssl/ecdsa_i15_bits.c"
    "./src/client/SSLClient/bssl/i15_bitlen.c"
    "./src/client/SSLClient/bssl/aes_pwr8_ctr.c"
    "./src/client/SSLClient/bssl/aes_x86ni_cbcdec.c"
    "./src/client/SSLClient/bssl/i32_fmont.c"
    "./src/client/SSLClient/bssl/ssl_rec_gcm.c"
    "./src/client/SSLClient/bssl/enc32be.c"
    "./src/client/SSLClient/bssl/dig_oid.c"
    "./src/client/SSLClient/bssl/i31_moddiv.c"
    "./src/client/SSLClient/bssl/ecdsa_i31_vrfy_raw.c"
    "./src/client/SSLClient/bssl/ecdsa_default_vrfy_asn1.c"
    "./src/client/SSLClient/bssl/ssl_server_mine2c.c"
    "./src/client/SSLClient/bssl/i15_fmont.c"
    "./src/client/SSLClient/bssl/rsa_i62_pkcs1_vrfy.c"
    "./src/client/SSLClient/bssl/ssl_server_mine2g.c"
    "./src/client/SSLClient/bssl/ghash_ctmul.c"
    "./src/client/SSLClient/bssl/i32_decode.c"
    "./src/client/SSLClient/bssl/des_tab.c"
    "./src/client/SSLClient/bssl/ecdsa_default_sign_asn1.c"
    "./src/client/SSLClient/bssl/i31_decode.c"
    "./src/client/SSLClient/bssl/rsa_i31_oaep_decrypt.c"
    "./src/client/SSLClient/bssl/ec_c25519_i31.c"
    "./src/client/SSLClient/bssl/aes_small_cbcenc.c"
    "./src/client/SSLClient/bssl/ec_prime_i31.c"
    "./src/client/SSLClient/bssl/i32_tmont.c"
    "./src/client/SSLClient/bssl/rsa_i32_pub.c"
    "./src/client/SSLClient/bssl/ec_curve25519.c"
    "./src/client/SSLClient/bssl/rsa_i15_modulus.c"
    "./src/client/SSLClient/bssl/aes_x86ni_cbcenc.c"
    "./src/client/SSLClient/bssl/ssl_server_minf2c.c"
    "./src/client/SSLClient/bssl/ssl_engine_default_aesgcm.c"
    "./src/client/SSLClient/bssl/ecdsa_default_vrfy_raw.c"
    "./src/client/SSLClient/bssl/aes_ct_cbcenc.c"
    "./src/client/SSLClient/bssl/i15_ninv15.c"
    "./src/client/SSLClient/bssl/ssl_rec_ccm.c"
    "./src/client/SSLClient/bssl/pemdec.c"
    "./src/client/SSLClient/bssl/hmac.c"
    "./src/client/SSLClient/bssl/aes_ct_dec.c"
    "./src/client/SSLClient/bssl/pemenc.c"
    "./src/client/SSLClient/bssl/aes_big_cbcenc.c"
    "./src/client/SSLClient/bssl/ecdsa_i15_sign_asn1.c"
    "./src/client/SSLClient/bssl/i32_iszero.c"
    "./src/client/SSLClient/bssl/rsa_default_pss_vrfy.c"
    "./src/client/SSLClient/bssl/rsa_i62_priv.c"
    "./src/client/SSLClient/bssl/i15_rshift.c"
    "./src/client/SSLClient/bssl/ccopy.c"
    "./src/client/SSLClient/bssl/rsa_i31_oaep_encrypt.c"
    "./src/client/SSLClient/bssl/ssl_keyexport.c"
    "./src/client/SSLClient/bssl/i32_reduce.c"
    "./src/client/SSLClient/bssl/rsa_pss_sig_pad.c"
    "./src/client/SSLClient/bssl/aes_ct64_enc.c"
    "./src/client/SSLClient/bssl/i32_sub.c"
    "./src/client/SSLClient/bssl/rsa_i15_pkcs1_vrfy.c"
    "./src/client/SSLClient/bssl/eax.c"
    "./src/client/SSLClient/bssl/ecdsa_atr.c"
    "./src/client/SSLClient/bssl/i31_mulacc.c"
    "./src/client/SSLClient/bssl/rsa_i62_oaep_encrypt.c"
    "./src/client/SSLClient/bssl/prf_sha384.c"
    "./src/client/SSLClient/bssl/i31_add.c"
    "./src/client/SSLClient/bssl/rsa_i15_priv.c"
    "./src/client/SSLClient/bssl/aes_ct_ctr.c"
    "./src/client/SSLClient/bssl/i31_montmul.c"
    "./src/client/SSLClient/bssl/ec_all_m15.c"
    "./src/client/SSLClient/bssl/ssl_ccert_single_ec.c"
    "./src/client/SSLClient/bssl/asn1enc.c"
    "./src/client/SSLClient/bssl/ssl_engine.c"
    "./src/client/SSLClient/bssl/aes_small_dec.c"
    "./src/client/SSLClient/bssl/ssl_engine_default_aesccm.c"
    "./src/client/SSLClient/bssl/rsa_i31_pss_sign.c"
    "./src/client/SSLClient/bssl/dec32be.c"
    "./src/client/SSLClient/bssl/aes_ct.c"
    "./src/client/SSLClient/bssl/x509_minimal_full.c"
    "./src/client/SSLClient/bssl/i15_tmont.c"
    "./src/client/SSLClient/bssl/des_ct_cbcdec.c"
    "./src/client/SSLClient/bssl/enc16be.c"
    "./src/client/SSLClient/bssl/i15_mulacc.c"
    "./src/client/SSLClient/bssl/dec16be.c"
    "./src/client/SSLClient/bssl/prf_sha256.c"
    "./src/client/SSLClient/bssl/ecdsa_i31_sign_raw.c"
    "./src/client/SSLClient/bssl/aes_x86ni_ctrcbc.c"
    "./src/client/SSLClient/bssl/ghash_ctmul64.c"
    "./src/client/SSLClient/bssl/i32_mulacc.c"
    "./src/client/SSLClient/bssl/i31_decmod.c"
    "./src/client/SSLClient/bssl/i32_add.c"
    "./src/client/SSLClient/bssl/multihash.c"
    "./src/client/SSLClient/bssl/i62_modpow2.c"
    "./src/client/SSLClient/bssl/encode_rsa_pk8der.c"
    "./src/client/SSLClient/bssl/i32_ninv32.c"
    "./src/client/SSLClient/bssl/i31_reduce.c"
    "./src/client/SSLClient/bssl/poly1305_ctmul32.c"
    "./src/client/SSLClient/bssl/ec_keygen.c"
    "./src/client/SSLClient/bssl/aes_ct64_dec.c"
    "./src/client/SSLClient/bssl/aesctr_drbg.c"
    "./src/client/SSLClient/bssl/rsa_default_oaep_encrypt.c"
    "./src/client/SSLClient/bssl/des_tab_cbcdec.c"
    "./src/client/SSLClient/bssl/ssl_hs_client.c"
    "./src/client/SSLClient/bssl/rsa_i31_privexp.c"
    "./src/client/SSLClient/bssl/gcm.c"
    "./src/client/SSLClient/bssl/i15_reduce.c"
    "./src/client/SSLClient/bssl/rsa_default_priv.c"
    "./src/client/SSLClient/bssl/dig_size.c"
    "./src/client/SSLClient/bssl/rsa_i31_pub.c"
    "./src/client/SSLClient/bssl/aes_ct64_ctrcbc.c"
    "./src/client/SSLClient/bssl/ssl_rec_cbc.c"
    "./src/client/SSLClient/bssl/aes_small_ctr.c"
    "./src/client/SSLClient/bssl/rsa_default_modulus.c"
    "./src/client/SSLClient/bssl/enc16le.c"
    "./src/client/SSLClient/bssl/i31_rshift.c"
    "./src/client/SSLClient/bssl/ecdsa_rta.c"
    "./src/client/SSLClient/bssl/dec32le.c"
    "./src/client/SSLClient/bssl/dec64be.c"
    "./src/client/SSLClient/bssl/ec_secp384r1.c"
    "./src/client/SSLClient/bssl/hkdf.c"
    "./src/client/SSLClient/bssl/aes_big_enc.c"
    "./src/client/SSLClient/bssl/rsa_i62_pub.c"
    "./src/client/SSLClient/bssl/i32_montmul.c"
    "./src/client/SSLClient/bssl/rsa_i15_keygen.c"
    "./src/client/SSLClient/bssl/rsa_i31_keygen_inner.c"
    "./src/client/SSLClient/bssl/aes_pwr8_cbcenc.c"
    "./src/client/SSLClient/bssl/des_support.c"
    "./src/client/SSLClient/bssl/ssl_server_minu2g.c"
    "./src/client/SSLClient/bssl/encode_ec_rawder.c"
    "./src/client/SSLClient/bssl/i15_iszero.c"
    "./src/client/SSLClient/bssl/rsa_i62_oaep_decrypt.c"
    "./src/client/SSLClient/bssl/rsa_i32_pss_vrfy.c"
    "./src/client/SSLClient/bssl/poly1305_ctmul.c"
    "./src/client/SSLClient/bssl/x509_knownkey.c"
    "./src/client/SSLClient/bssl/sha2small.c"
    "./src/client/SSLClient/bssl/ssl_client_default_rsapub.c"
    "./src/client/SSLClient/bssl/rsa_i32_priv.c"
    "./src/client/SSLClient/bssl/ssl_engine_default_descbc.c"
    "./src/client/SSLClient/bssl/rsa_default_pkcs1_sign.c"
    "./src/client/SSLClient/bssl/aes_ct64_ctr.c"
    "./src/client/SSLClient/bssl/ssl_scert_single_rsa.c"
    "./src/client/SSLClient/bssl/ec_secp521r1.c"
    "./src/client/SSLClient/bssl/rsa_default_oaep_decrypt.c"
    "./src/client/SSLClient/bssl/ssl_ccert_single_rsa.c"
    "./src/client/SSLClient/bssl/ec_pubkey.c"
    "./src/client/SSLClient/bssl/ecdsa_i31_sign_asn1.c"
    "./src/client/SSLClient/bssl/dec64le.c"
    "./src/client/SSLClient/bssl/rsa_pkcs1_sig_unpad.c"
    "./src/client/SSLClient/bssl/ec_c25519_m64.c"
    "./src/client/SSLClient/bssl/enc64le.c"
    "./src/client/SSLClient/bssl/ssl_hashes.c"
    "./src/client/SSLClient/bssl/aes_pwr8_cbcdec.c"
    "./src/client/SSLClient/bssl/i31_iszero.c"
    "./src/client/SSLClient/bssl/rsa_default_pub.c"
    "./src/client/SSLClient/bssl/rsa_i32_oaep_encrypt.c"
    "./src/client/SSLClient/bssl/ghash_pclmul.c"
    "./src/client/SSLClient/bssl/des_ct_cbcenc.c"
    "./src/client/SSLClient/bssl/ec_c25519_m15.c"
    "./src/client/SSLClient/bssl/i32_bitlen.c"
    "./src/client/SSLClient/bssl/des_ct.c"
    "./src/client/SSLClient/bssl/rsa_default_pss_sign.c"
    "./src/client/SSLClient/bssl/prf_md5sha1.c"
    "./src/client/SSLClient/bssl/rsa_ssl_decrypt.c"
    "./src/client/SSLClient/bssl/rsa_i31_pkcs1_vrfy.c"
    "./src/client/SSLClient/bssl/ec_default.c"
    "./src/client/SSLClient/bssl/chacha20_ct.c"
    "./src/client/SSLClient/bssl/rsa_oaep_pad.c"
    "./src/client/SSLClient/bssl/ec_p256_m64.c"
    "./src/client/SSLClient/bssl/ec_p256_m62.c"
    "./src/client/SSLClient/bssl/chacha20_sse2.c"
    "./src/client/SSLClient/bssl/rsa_i31_priv.c"
    "./src/client/SSLClient/bssl/i15_encode.c"
    "./src/client/SSLClient/bssl/ssl_lru.c"
    "./src/client/SSLClient/bssl/aes_big_ctr.c"
    "./src/client/SSLClient/bssl/ecdsa_default_sign_raw.c"
    "./src/client/SSLClient/bssl/encode_rsa_rawder.c"
    "./src/client/SSLClient/bssl/i15_decode.c"
    "./src/client/SSLClient/bssl/aes_ct_ctrcbc.c"
    "./src/client/SSLClient/bssl/aes_ct_cbcdec.c"
    "./src/client/SSLClient/bssl/rsa_default_privexp.c"
    "./src/client/SSLClient/bssl/ssl_engine_default_aescbc.c"
    "./src/client/SSLClient/bssl/x509_decoder.c"
    "./src/client/SSLClient/bssl/skey_decoder.c"
    "./src/client/SSLClient/bssl/ssl_server_minr2g.c"
    "./src/client/SSLClient/bssl/aes_pwr8.c"
    "./src/client/SSLClient/bssl/hmac_drbg.c"
    "./src/client/SSLClient/bssl/rsa_pss_sig_unpad.c"
    "./src/client/SSLClient/bssl/enc32le.c"
    "./src/client/SSLClient/bssl/i31_tmont.c"
    "./src/client/SSLClient/bssl/ecdsa_i31_bits.c"
    "./src/client/SSLClient/bssl/ecdsa_i15_vrfy_raw.c"
    "./src/client/SSLClient/bssl/aes_x86ni_ctr.c"
    "./src/client/SSLClient/bssl/rsa_i32_oaep_decrypt.c"
    "./src/client/SSLClient/bssl/rsa_i31_keygen.c"
    "./src/client/SSLClient/bssl/ssl_engine_default_chapol.c"
    "./src/client/SSLClient/bssl/i15_sub.c"
    "./src/client/SSLClient/bssl/i32_decmod.c"
    "./src/client/SSLClient/bssl/ssl_engine_default_ecdsa.c"
    "./src/client/SSLClient/bssl/aes_big_dec.c"
    "./src/client/SSLClient/bssl/i31_encode.c"
    "./src/client/SSLClient/bssl/md5sha1.c"
    "./src/client/SSLClient/bssl/ec_c25519_i15.c"
    "./src/client/SSLClient/bssl/rsa_default_pkcs1_vrfy.c"
    "./src/client/SSLClient/bssl/ssl_client_full.c"
    "./src/client/SSLClient/bssl/ec_prime_i15.c"
    "./src/client/SSLClient/bssl/aes_ct64_cbcdec.c"
    "./src/client/SSLClient/bssl/i32_muladd.c"
    "./src/client/SSLClient/bssl/rsa_default_pubexp.c"
    "./src/client/SSLClient/bssl/aes_ct64.c"
    "./src/client/SSLClient/bssl/rsa_default_keygen.c"
    "./src/client/SSLClient/bssl/ghash_ctmul32.c"
    "./src/client/SSLClient/bssl/aes_pwr8_ctrcbc.c"
    "./src/client/SSLClient/bssl/ec_c25519_m62.c"
    "./src/client/SSLClient/bssl/ecdsa_i31_vrfy_asn1.c"
    "./src/client/SSLClient/bssl/ssl_scert_single_ec.c"
    "./src/client/SSLClient/bssl/i15_montmul.c"
    "./src/client/SSLClient/bssl/rsa_i15_pub.c"
    "./src/client/SSLClient/bssl/i31_sub.c"
    "./src/client/SSLClient/bssl/i31_fmont.c"
    "./src/client/SSLClient/bssl/i31_muladd.c"
    "./src/client/SSLClient/bssl/shake.c"
    "./src/client/SSLClient/bssl/i15_modpow2.c"
    "./src/client/SSLClient/bssl/ecdsa_i15_sign_raw.c"
    "./src/client/SSLClient/bssl/i31_decred.c"
    "./src/client/SSLClient/bssl/i31_modpow.c"
    "./src/client/SSLClient/bssl/i31_modpow2.c"
    "./src/client/SSLClient/bssl/ssl_io.c"
    "./src/client/SSLClient/bssl/ghash_pwr8.c"
    "./src/client/SSLClient/bssl/rsa_i62_pss_sign.c"
    "./src/client/SSLClient/bssl/aes_big_ctrcbc.c"
    "./src/client/SSLClient/bssl/encode_ec_pk8der.c"
    "./src/client/SSLClient/bssl/i32_encode.c"
    "./src/client/SSLClient/bssl/ec_secp256r1.c"
    "./src/client/SSLClient/bssl/ccm.c"
    "./src/client/SSLClient/bssl/sha2big.c"
    "./src/client/SSLClient/bssl/poly1305_ctmulq.c"
    "./src/client/SSLClient/bssl/aes_small_cbcdec.c"
    "./src/client/SSLClient/bssl/ssl_hs_server.c"
    "./src/client/SSLClient/bssl/dec16le.c"
    "./src/client/SSLClient/bssl/rsa_i31_modulus.c"
    "./src/client/SSLClient/bssl/ssl_rec_chapol.c"
)

idf_component_register(
    SRCS "${sources}"
    INCLUDE_DIRS "src"
    #PRIV_INCLUDE_DIRS "src/client" "src/client/SSLClient" "src/client/SSLClient/bssl" "src/client/SSLClient/client" "src/extras"
    REQUIRES "${requires}"
)
